--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,18 @@ services:
     ports:
       - '8000:80'
     volumes:
-      - ./nginx/nginx.com:/etc/nginx/nginx.conf:ro
+      - ./src:/var/www/html
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - php
   php:
     build:
       context: ./dockerfiles
       dockerfile: php.dockerfile
     volumes:
       - ./src:/var/www/html:delegated
+    depends_on:
+      - mysql
   mysql:
     image: mysql:5.7
     env_file:
